--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
-url: https://geniusthrong.github.io
+url: https://the-currency.github.io
 baseurl: /
 
 # Site Settings
-title: GeniusThrong
-description: "Believe in Genius Supremacy ! Be Genius in your own way Rawrrrrrr !"
-keywords: "GeniusThrong, Website"
+title: Currency
+description: "The only Currency you'll ever need !"
+keywords: "The Currency, Website"
 google-tracking-id:
 
 # Career Settings
