--- a/package.json
+++ b/package.json
@@ -21,5 +21,5 @@
   "bugs": {
     "url": "https://github.com/the-currency/thecurrency/issues"
   },
-  "homepage": "https://the-currency.github.io/thecurrency"
+  "homepage": "https://the-currency.github.io/the-currency.github.io"
 }
