--- a/_config.yml
+++ b/_config.yml
@@ -2,9 +2,9 @@ url: https://the-currency.github.io
 baseurl: /
 
 # Site Settings
-title: Currency
-description: "The only Currency you'll ever need !"
-keywords: "The Currency, Website"
+title: CURRENCY
+description: "The only $CURRENCY you'll ever need !"
+keywords: "$CURRENCY, Website"
 google-tracking-id:
 
 # Career Settings
